--- a/community/src/main/resources/application.properties
+++ b/community/src/main/resources/application.properties
@@ -3,4 +3,10 @@ spring.datasource.url=jdbc:mysql://localhost:3306/community?serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=1234
 
+# xml ?? result type? ????? ??? ? ??? alias ??
+mybatis.type-aliases-package = spring.community.domain
+
+# Mybatis mapper ?? ??
+mybatis.mapper-locations = mapper/*.xml
+
 server.port=8081
