로그인 시 IT분야 선택 가능 - db연동

--- a/community/src/main/resources/application.properties
+++ b/community/src/main/resources/application.properties
@@ -4,9 +4,10 @@ spring.datasource.username=root
 spring.datasource.password=1234
 
 # xml ?? result type? ????? ??? ? ??? alias ??
+# ??? result tpye? ?? ??? ? ??? alias ??
 mybatis.type-aliases-package = spring.community.domain
 
 # Mybatis mapper ?? ??
-mybatis.mapper-locations = mapper/*.xml
+mybatis.mapper-locations = classpath:mybatis/mapper/**/**.xml
 
 server.port=8081
