--- a/community/.gitignore
+++ b/community/.gitignore
@@ -5,6 +5,9 @@ build/
 !**/src/main/**/build/
 !**/src/test/**/build/
 
+### 설정파일 숨기기 ###
+!**/src/main/**/application.properties
+
 ### STS ###
 .apt_generated
 .classpath
