--- a/community/src/main/resources/application.properties
+++ b/community/src/main/resources/application.properties
@@ -3,6 +3,7 @@ spring.datasource.url=jdbc:mysql://localhost:3306/community?serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=1234
 
+spring.devtools.livereload.enabled=true
 # xml ?? result type? ????? ??? ? ??? alias ??
 # ??? result tpye? ?? ??? ? ??? alias ??
 mybatis.type-aliases-package = spring.community.domain
