--- a/community/.gitignore
+++ b/community/.gitignore
@@ -5,8 +5,13 @@ build/
 !**/src/main/**/build/
 !**/src/test/**/build/
 
+### AWS ###
+aws.yml
+
 ### 설정파일 숨기기 ###
 !**/src/main/**/application.properties
+
+application.properties
 
 ### STS ###
 .apt_generated
